argocd/apps/change-detection/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: change-detection
  name: change-detection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: change-detection
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: change-detection
    spec:
      containers:
        - image: ghcr.io/dgtlmoon/changedetection.io:latest@sha256:a17e446fb1ada7b8003e54027bf70245cd951af322e0ee18c7299fb86b17a227
          imagePullPolicy: IfNotPresent
          name: change-detection
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - mountPath: /datastore
              name: data
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: playwright
  name: playwright
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playwright
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: playwright
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
      containers:
        - image: browserless/chrome:1.61-chrome-stable@sha256:efac47cfff3830d9a50b27d29f8bbb61949058ae336c823fbe9bd3c0d1debcc8
          imagePullPolicy: IfNotPresent
          name: playwright
          resources:
            requests:
              memory: "500Mi"
              cpu: "100m"
            limits:
              memory: "4Gi"
              cpu: "1000m"
          ports:
            - containerPort: 3000
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
