argocd/apps/change-detection/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: change-detection
  name: change-detection
spec:
  ports:
    - name: "http"
      port: 5000
      targetPort: 5000
  selector:
    app: change-detection
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: playwright
  name: playwright
spec:
  ports:
    - name: "api"
      port: 3000
      targetPort: 3000
  selector:
    app: playwright
