argocd/apps/change-detection/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: change-detection
  annotations:
      kubernetes.io/ingress.class: istio
spec:
  ingressClassName: istio
  rules:
    - host: change.yanello.net
      http:
        paths:
          - backend:
              service:
                name: change-detection
                port:
                  number: 5000
            path: /
            pathType: Prefix
