argocd/apps/change-detection/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: change-vs
spec:
  hosts:
  - change.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: change-detection
        port:
          number: 5000
